add deleteUser features
